# autopin-plus

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONFIGURATION  Configuration.md  Doxyfile  README.md  test.sh
cmake/Modules/: FindMosquitto.cmake
doc/html/: annotated.html  annotated.js  classes.html  files.html  files.js  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x78.html  functions_0x7e.html  functions_dup.js  functions_enum.html  functions_eval.html  functions_func.html  functions_func.js  functions_func_0x62.html  functions_func_0x63.html  functions_func_0x64.html  functions_func_0x65.html  functions_func_0x66.html  functions_func_0x67.html  functions_func_0x69.html  functions_func_0x6d.html  functions_func_0x6e.html  (+56 more)
doc/html/d0/d10/: classObservedProcess__coll__graph.map  classObservedProcess__coll__graph.md5
doc/html/d0/d14/: TraceThread_8cpp.html  TraceThread_8cpp_source.html
doc/html/d0/d52/: Monitor__perf_8h__dep__incl.map  Monitor__perf_8h__dep__incl.md5
doc/html/d0/d77/: XMLPinningHistory_8h__dep__incl.map  XMLPinningHistory_8h__dep__incl.md5
doc/html/d0/d7d/: PinningHistory_8cpp__incl.map  PinningHistory_8cpp__incl.md5
doc/html/d0/d82/: classProcessTree-members.html
doc/html/d0/d96/: classTraceThread.html  classTraceThread.js
doc/html/d0/d97/: OutputChannel_8cpp.html  OutputChannel_8cpp_source.html
doc/html/d1/d27/: TraceThread_8h.html  TraceThread_8h_source.html
doc/html/d1/d42/: classStandardConfiguration__inherit__graph.map  classStandardConfiguration__inherit__graph.md5
doc/html/d1/d49/: ControlStrategy_8h.html  ControlStrategy_8h_source.html
doc/html/d1/d68/: classStrategy__autopin1-members.html
doc/html/d1/d79/: Strategy__autopin1_8cpp__incl.map  Strategy__autopin1_8cpp__incl.md5
doc/html/d1/d84/: Monitor__random_8cpp.html  Monitor__random_8cpp_source.html
doc/html/d1/d91/: ControlStrategy_8h__dep__incl.map  ControlStrategy_8h__dep__incl.md5
doc/html/d1/dc2/: classControlStrategy.html  classControlStrategy.js
doc/html/d1/dd7/: classMonitor__perf__coll__graph.map  classMonitor__perf__coll__graph.md5
doc/html/d2/d0b/: classControlStrategy-members.html
doc/html/d2/d2c/: classControlStrategy__coll__graph.map  classControlStrategy__coll__graph.md5
doc/html/d2/d66/: AutopinContext_8cpp__incl.map  AutopinContext_8cpp__incl.md5
doc/html/d2/d6e/: classOSServicesLinux__coll__graph.map  classOSServicesLinux__coll__graph.md5
doc/html/d2/d8d/: XMLPinningHistory_8h.html  XMLPinningHistory_8h_source.html
doc/html/d2/d9d/: classXMLPinningHistory__inherit__graph.map  classXMLPinningHistory__inherit__graph.md5
doc/html/d2/dd6/: TraceThread_8h__dep__incl.map  TraceThread_8h__dep__incl.md5
doc/html/d2/de1/: classError-members.html
doc/html/d2/df3/: Strategy__autopin1_8h.html  Strategy__autopin1_8h_source.html
doc/html/d2/dfa/: classObservedProcess.html  classObservedProcess.js
doc/html/d3/d07/: Monitor__perfmon_8h__incl.md5
doc/html/d3/d0d/: OSServicesLinux_8h__incl.map  OSServicesLinux_8h__incl.md5
doc/html/d3/d43/: classTraceThread__coll__graph.map  classTraceThread__coll__graph.md5
doc/html/d3/d59/: Configuration_8h.html  Configuration_8h_source.html  Strategy__autopin1_8cpp.html  (+1 more)
doc/html/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_7e.js  classes_61.js  classes_63.js  classes_65.js  classes_6d.js  classes_6f.js  classes_70.js  classes_73.js  classes_74.js  classes_78.js  defines_61.js  defines_63.js  defines_6e.js  defines_72.js  defines_75.js  enums_61.js  enums_6d.js  enumvalues_61.js  (+68 more)
examples/: 2-pinnings-spm.conf  autopin1_simple.conf  daemon.conf  energy_measurements.conf  energy_measurements_desktop.conf  energy_pinning.conf  multi_process.conf  test.conf  testPageMigrate.conf
include/AutopinPlus/: Autopin.h  AutopinContext.h  Configuration.h  ControlStrategy.h  DataLogger.h  Error.h  Exception.h  MQQTClient.h  MQTTClient.h  OSServices.h  ObservedProcess.h  OutputChannel.h  PerformanceMonitor.h  PinningHistory.h  ProcessTree.h  StandardConfiguration.h  Tools.h  Watchdog.h  XMLPinningHistory.h  libautopin+_msg.h
include/AutopinPlus/OS/: CpuInfo.h  OSServices.h  SignalDispatcher.h  TraceThread.h
perf-pageMigrate/tools/perf/: Makefile.perf  builtin.h  deps
src/: Autopin.cpp  Autopin.h  AutopinContext.cpp  AutopinContext.h  Configuration.cpp  Configuration.h  ControlStrategy.cpp  ControlStrategy.h  Error.cpp  Error.h  OSServices.cpp  OSServices.h  ObservedProcess.cpp  ObservedProcess.h  OutputChannel.cpp  OutputChannel.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PinningHistory.cpp  PinningHistory.h  ProcessTree.cpp  ProcessTree.h  StandardConfiguration.cpp  StandardConfiguration.h  XMLPinningHistory.cpp  XMLPinningHistory.h  main.cpp
src/AutopinPlus/: Autopin.cpp  AutopinContext.cpp  Configuration.cpp  ControlStrategy.cpp  DataLogger.cpp  Error.cpp  Exception.cpp  MQQTClient.cpp  MQTTClient.cpp  OSServices.cpp  ObservedProcess.cpp  OutputChannel.cpp  PerformanceMonitor.cpp  PinningHistory.cpp  ProcessTree.cpp  StandardConfiguration.cpp  Tools.cpp  Watchdog.cpp  XMLPinningHistory.cpp  main.cpp
src/AutopinPlus/OS/: CpuInfo.cpp  OSServices.cpp  SignalDispatcher.cpp  TraceThread.cpp
src/monitor/perf/: Monitor_perf.cpp  Monitor_perf.h
src/monitor/random/: Monitor_random.cpp  Monitor_random.h
src/os/linux/: OSServicesLinux.cpp  OSServicesLinux.h  TraceThread.cpp  TraceThread.h
src/strategy/autopin1/: Strategy_autopin1.cpp  Strategy_autopin1.h
src/strategy/history/: Strategy_history.cpp  Strategy_history.h
(+295 files in other folders)
